--- a/css/main.css
+++ b/css/main.css
@@ -644,6 +644,10 @@ video {
   margin-left: 0.5rem;
 }
 
+.mt-20 {
+  margin-top: 5rem;
+}
+
 .block {
   display: block;
 }
@@ -654,6 +658,10 @@ video {
 
 .table {
   display: table;
+}
+
+.grid {
+  display: grid;
 }
 
 .hidden {
@@ -818,6 +826,15 @@ video {
   border-radius: 1rem;
 }
 
+.border-b-2 {
+  border-bottom-width: 2px;
+}
+
+.border-b-gray-400 {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(156 163 175 / var(--tw-border-opacity));
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -841,6 +858,10 @@ video {
 .bg-section {
   --tw-bg-opacity: 1;
   background-color: rgb(237 237 237 / var(--tw-bg-opacity));
+}
+
+.bg-transparent {
+  background-color: transparent;
 }
 
 .fill-gray-400 {
@@ -875,6 +896,16 @@ video {
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
+}
+
+.py-20 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .pr-12 {
@@ -944,6 +975,10 @@ video {
   line-height: 1.75rem;
 }
 
+.text-\[1\.8rem\] {
+  font-size: 1.8rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -1000,6 +1035,10 @@ video {
 
 .opacity-100 {
   opacity: 1;
+}
+
+.opacity-70 {
+  opacity: 0.7;
 }
 
 .shadow-lg {
@@ -1312,7 +1351,7 @@ html {
   color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
-/* product section */
+/* single product section */
 
 .secondary-card {
   display: flex;
@@ -1338,6 +1377,43 @@ html {
   text-transform: uppercase;
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
+/* search section */
+
+#search-section {
+  background-image: url("/assets/images/landing.png");
+  background-size: cover;
+  background-position: bottom;
+}
+
+#results {
+  grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+  gap: 12px;
+}
+
+.search-card {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 0.5rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  padding: 1rem;
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.search-card img {
+  width: 55%;
+}
+
+.search-card h3 {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  font-weight: 100;
+  text-transform: uppercase;
 }
 
 .hover\:-translate-y-1:hover {
@@ -1394,6 +1470,11 @@ html {
     align-items: stretch;
   }
 
+  .sm\:px-16 {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
+
   .sm\:pr-10 {
     padding-right: 2.5rem;
   }
@@ -1435,6 +1516,10 @@ html {
 
   .md\:text-\[2rem\] {
     font-size: 2rem;
+  }
+
+  .md\:text-\[2\.4rem\] {
+    font-size: 2.4rem;
   }
 }
 
